<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/lighter_green"
    android:backgroundTint="@color/lighter_green"
    tools:context=".fragments.MealSelector">


    <TextView
        android:id="@+id/Select_meal_title"
        android:layout_width="347dp"
        android:layout_height="66dp"
        android:layout_marginTop="28dp"
        android:text="@string/select_meal"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/breakfast_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/breakfast"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/breakfast"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:iconTint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Select_meal_title"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/morning_snack_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/morning_snack"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/snack"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:iconTint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfast_button"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lunch_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/lunch"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/lunch"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:iconTint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morning_snack_button"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/evening_snack_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/evening_snack"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/snack"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:iconTint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lunch_button"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dinner_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/dinner"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/dinner"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:iconTint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evening_snack_button"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>