<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/lighter_green"
    tools:context=".fragments.RecipesManagementFragment">

    <TextView
        android:id="@+id/Product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/inputProduct"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recipe_title"
        android:textColor="@color/dark_green"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/product_label"
        android:layout_width="296dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Product_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_product_button"
        android:layout_width="45dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/add"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_label" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hl"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@color/dark_green"
        android:backgroundTint="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_button">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/product_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ProductListLabel"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hl" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="297dp"
        android:layout_height="157dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_list_title">

        <LinearLayout
            android:id="@+id/product_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"/>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_recipe"
        android:layout_width="42dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/save"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:iconTint="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>